networking/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mentorify-gateway
  namespace: mentorify
  labels:
    app.kubernetes.io/part-of: mentorify
spec:
  # Use the default Istio ingress gateway installed with Istio
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      # TODO: Domain alındığında TLS ekle:
      # tls:
      #   httpsRedirect: true
    # TODO: Domain + cert-manager ile TLS termination:
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   hosts:
    #     - "mentorify.example.com"
    #   tls:
    #     mode: SIMPLE
    #     credentialName: mentorify-tls
